--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>808 Slammers JTT Tennis Team Website</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <p>[INSERT 808 SLAMMER DESCRIPTION HERE]</p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More!</a>
         </div>
     </div>
 </header>
