--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -11,6 +11,7 @@
   {% include portfolio.html %}
   {% include aside.html %}
   {% include contact.html %}
+  {% include forms.html %}
   {% include scripts.html %}
 </body>
 
