--- a/_includes/forms.html
+++ b/_includes/forms.html
@@ -10,7 +10,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Download the picture shown!
                             </div>
                         </div>
                     </div>
