--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,14 +3,18 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/peter_ho.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Category
                             </div>
-                            <div class="project-name">
-                                Project Name
+                            <div class="Biography">
+                                My name is Peter Ho. I’m attending University of Hawaii at Manoa. 
+                                I am there to study Kinesiology and plan to go to graduate school to become a Physical Therapist. 
+                                I have played tennis for 8 years now. 
+                                My experience is playing high school tennis at Moanalua High and played first doubles for them also played a season of junior team tennis. 
+                                I am also an assistant head coach at Roosevelt high. 
                             </div>
                         </div>
                     </div>
