--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,15 +2,30 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://www.facebook.com/profile.php?id=100002448257013" class="portfolio-box">
+                    <img src="img/portfolio/sean_sueno.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Head Coach
+                            </div>
+                            <div class="Sean Sueno">
+                                Description about Sean Sueno.
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://www.facebook.com/profile.php?id=100022114089571" class="portfolio-box">
                     <img src="img/portfolio/peter_ho.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Coach
                             </div>
-                            <div class="Biography">
-                                My name is Peter Ho. I’m attending University of Hawaii at Manoa. 
+                            <div class="Peter Ho">
+                                I’m attending University of Hawaii at Manoa. 
                                 I am there to study Kinesiology and plan to go to graduate school to become a Physical Therapist. 
                                 I have played tennis for 8 years now. 
                                 My experience is playing high school tennis at Moanalua High and played first doubles for them also played a season of junior team tennis. 
@@ -22,14 +37,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/brandan_bersola.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Coach
                             </div>
-                            <div class="project-name">
-                                Project Name
+                            <div class="Brandan Bersola">
+                                [Information about Brandan Bersola]
                             </div>
                         </div>
                     </div>
@@ -37,59 +52,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/sae_song.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Assistant Coach
                             </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
+                            <div class="Sae Hyun Song">
+                                [Information about Sae Hyun Song]
                             </div>
                         </div>
                     </div>
