--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -7,9 +7,9 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Head Coach
+                                Head Coach: Sean Sueno
                             </div>
-                            <div class="Sean Sueno">
+                            <div class="project-name">
                                 Description about Sean Sueno.
                             </div>
                         </div>
@@ -22,9 +22,9 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Coach
+                                Coach: Peter Ho
                             </div>
-                            <div class="Peter Ho">
+                            <div class="project-name">
                                 I’m attending University of Hawaii at Manoa. 
                                 I am there to study Kinesiology and plan to go to graduate school to become a Physical Therapist. 
                                 I have played tennis for 8 years now. 
@@ -41,9 +41,9 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Coach
+                                Coach: Brandan Bersola
                             </div>
-                            <div class="Brandan Bersola">
+                            <div class="project-name">
                                 [Information about Brandan Bersola]
                             </div>
                         </div>
@@ -56,9 +56,9 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Assistant Coach
+                                Assistant Coach: Sae Hyun Song
                             </div>
-                            <div class="Sae Hyun Song">
+                            <div class="project-name">
                                 [Information about Sae Hyun Song]
                             </div>
                         </div>
