--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,7 +1,7 @@
 <section class="no-padding" id="portfolio">
     <div class="container-fluid">
         <div class="row no-gutter">
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4">
                 <a href="https://www.facebook.com/profile.php?id=100002448257013" class="portfolio-box">
                     <img src="img/portfolio/sean_sueno.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -16,7 +16,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4">
                 <a href="https://www.facebook.com/profile.php?id=100022114089571" class="portfolio-box">
                     <img src="img/portfolio/peter_ho.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -35,8 +35,8 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+            <div class="col-lg-4">
+                <a href="https://www.facebook.com/brandan.bersola" class="portfolio-box">
                     <img src="img/portfolio/brandan_bersola.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -50,8 +50,8 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+            <div class="col-lg-4">
+                <a href="https://www.facebook.com/saehyun.song.1" class="portfolio-box">
                     <img src="img/portfolio/sae_song.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
