--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,7 +3,7 @@
         <div class="row no-gutter">
             <div class="col-sm-4">
                 <a href="https://www.facebook.com/profile.php?id=100002448257013" class="portfolio-box">
-                    <img src="img/portfolio/sean_sueno.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/sean_sueno.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -18,7 +18,7 @@
             </div>
             <div class="col-sm-4">
                 <a href="https://www.facebook.com/profile.php?id=100022114089571" class="portfolio-box">
-                    <img src="img/portfolio/peter_ho.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/peter_ho.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -37,7 +37,7 @@
             </div>
             <div class="col-sm-4">
                 <a href="https://www.facebook.com/brandan.bersola" class="portfolio-box">
-                    <img src="img/portfolio/brandan_bersola.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/brandan_bersola.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -52,7 +52,7 @@
             </div>
             <div class="col-sm-4">
                 <a href="https://www.facebook.com/saehyun.song.1" class="portfolio-box">
-                    <img src="img/portfolio/sae_song.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/sae_song.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
