--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,7 +1,7 @@
 <section class="no-padding" id="portfolio">
     <div class="container-fluid">
         <div class="row no-gutter">
-            <div class="col-sm-4">
+            <div class="col-lg-4">
                 <a href="https://www.facebook.com/profile.php?id=100002448257013" class="portfolio-box">
                     <img src="img/portfolio/sean_sueno.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -16,7 +16,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4">
                 <a href="https://www.facebook.com/profile.php?id=100022114089571" class="portfolio-box">
                     <img src="img/portfolio/peter_ho.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -35,7 +35,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4">
                 <a href="https://www.facebook.com/brandan.bersola" class="portfolio-box">
                     <img src="img/portfolio/brandan_bersola.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -45,21 +45,6 @@
                             </div>
                             <div class="project-name">
                                 [Information about Brandan Bersola]
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-sm-4">
-                <a href="https://www.facebook.com/saehyun.song.1" class="portfolio-box">
-                    <img src="img/portfolio/sae_song.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Assistant Coach: Sae Hyun Song
-                            </div>
-                            <div class="project-name">
-                                [Information about Sae Hyun Song]
                             </div>
                         </div>
                     </div>
