--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,9 +1,9 @@
 <section class="no-padding" id="portfolio">
     <div class="container-fluid">
         <div class="row no-gutter">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-6">
                 <a href="https://www.facebook.com/profile.php?id=100002448257013" class="portfolio-box">
-                    <img src="img/portfolio/sean_sueno.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
+                    <img src="img/portfolio/sean_sueno.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -16,9 +16,9 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-6">
                 <a href="https://www.facebook.com/profile.php?id=100022114089571" class="portfolio-box">
-                    <img src="img/portfolio/peter_ho.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
+                    <img src="img/portfolio/peter_ho.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -35,9 +35,9 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-6">
                 <a href="https://www.facebook.com/brandan.bersola" class="portfolio-box">
-                    <img src="img/portfolio/brandan_bersola.jpg" style="width: 50%; height: 50%;" class="img-responsive" alt="">
+                    <img src="img/portfolio/brandan_bersola.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
