--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,7 +4,8 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">MISSION STATEMENT</h2>
                 <hr class="light">
-                <p class="text-faded">[Insert Mission Statement Here]</a>
+                <p class="text-faded">[Insert Mission Statement Here]</p>
+                <a href="#portfolio" class="btn btn-default btn-xl">Meet the coaches!</a>
             </div>
         </div>
     </div>
