--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,7 +5,7 @@
                 <h2 class="section-heading">MISSION STATEMENT</h2>
                 <hr class="light">
                 <p class="text-faded">[Insert Mission Statement Here]</p>
-                <a href="#portfolio" class="btn btn-default btn-xl">Meet the coaches!</a>
+                <a href="#portfolio" class="btn btn-default btn-xl page-scroll">Meet the coaches!</a>
             </div>
         </div>
     </div>
