--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#portfolio" class="portfolio-box">
+                <a href="#sueno" class="portfolio-box" id="sueno">
                     <img src="img/portfolio/sean_sueno.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -17,7 +17,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#portfolio" class="portfolio-box">
+                <a href="#ho" class="portfolio-box" id="ho">
                     <img src="img/portfolio/peter_ho.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -36,7 +36,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#portfolio" class="portfolio-box">
+                <a href="#bersola" class="portfolio-box" id="bersola">
                     <img src="img/portfolio/brandan_bersola.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
